--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,3 +1,17 @@
+header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.linkWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
 .headerTitle {
     font-family: 'Oswald', sans-serif;
     font-weight: 700;
@@ -9,6 +23,8 @@ a {
     margin: 15px;
     text-decoration: none;
     color: black;
+    transition: 0.2s ease-in-out;
+
 }
 
 .logoutButton {
@@ -17,4 +33,6 @@ a {
     font-family: 'Lato', sans-serif;
     font-size: 1rem;
     cursor: pointer;
+    transition: 0.2s ease-in-out;
+
 }
