--- a/src/Game/GamePage.css
+++ b/src/Game/GamePage.css
@@ -1,13 +1,182 @@
-.locationWrapper {
+.gameMain {
+    width: 100%;
+    height: auto;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+
+.locationWrapper {
+    width: 90%;
+    height: auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    justify-content: center;
+    align-items: center;
+}
+
+.mapControls {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.mapButton {
+    height: 64px;
+    width: 64px;
+    background-color: transparent;
+    border: none;
+    color: transparent;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 10px;    
+    position: relative;
+    left: 0;
+    transition: 0.2s ease-in-out;
+    -moz-transition: 0.2s ease-in-out;
+    -o-transition: 0.2s ease-in-out;
+    -webkit-transition: 0.2s ease-in-out;
+}
+
+.mapButton:hover {
+    -webkit-filter: drop-shadow(0px 0px 1px rgba(239, 83, 0, 0.8));
+    filter: drop-shadow(0px 0px 1px rgba(239, 83, 0, 0.8));
+}
+
+.locationImageWrapper {
+    width: 516px;
+    height: 516px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    margin: 25px;
+}
+
+.mapLocation {
+    width: 395px;
+    height: 395px;
+}
+
+.hintsWrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+.hintsH4 {
+    font-size: 1rem;
+    text-align: left;
+    margin: 10px;
+}
+
+.hintsButton {
+    border: none;
+    border-top: 2px black solid;
+    border-right: 2px black solid;
+    border-bottom: 4px black solid;
+    border-left: 4px black solid;
+    border-radius: 5px;
+    height: 75px;
+    width: 155px;
+    cursor: pointer;
+    font-family: 'Lato', sans-serif;
+    font-size: .9rem;
+    text-align: left;
+    background-color: transparent;
+    margin: 10px;
+}
+
+.hintsButton:hover {
+    border-bottom: 4px rgb(239, 83, 0) solid;
+    border-left: 4px rgb(239, 83, 0) solid;
+    border-top: 2px rgb(239, 83, 0) solid;
+    border-right: 2px rgb(239, 83, 0) solid;
+    border-radius: 3px;
+    background-color: transparent;
+    color: black;
+}
+
+.hintsP {
+    font-size: .9rem;
+    text-align: left;
+    margin: 10px;
+}
+
+.locationGuessWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.guessWrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 25px;
+}
+
+.guessInput {
+    height: 20px;
+    width: 200px;
+    padding: 5px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 500;
+    border: black solid 2px;
+    border-radius: 3px;
     text-align: center;
-    padding: 50px;
 }
 
-.hiddenButton {
-    display: none;
+.guessButton {
+    height: 35px;
+    width: auto;
+    padding: 15px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 15px;
+    border: black solid 2px;
+    border-radius: 3px;
+    background-color: transparent;
+    color: black;
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
 }
 
+.guessButton:hover {
+    border: rgb(239, 83, 0) solid 2px;
+    border-radius: 3px;
+    background-color: transparent;
+    color: black;
+}
+
+.guessButton:active {
+    border:  rgb(239, 83, 0) solid 2px;
+    border-radius: 3px;
+    background-color: rgb(0, 142, 138);
+    color: white;
+}
+
+.locationGuessWrapper h4 {
+    margin: 0px;
+}
+
+.feedbackWrapper h4 {
+    margin: opx;
+}
