--- a/src/Home/HomePage.css
+++ b/src/Home/HomePage.css
@@ -34,25 +34,27 @@
     font-size: 1rem;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-
 }
 
 .homeButton:hover {
-    border: orangered solid 2px;
+    border: rgb(239, 83, 0) solid 2px;
     border-radius: 3px;
     background-color: transparent;
     color: black;
 }
 
+.homeButton:active {
+    border:  rgb(239, 83, 0) solid 2px;
+    border-radius: 3px;
+    background-color: rgb(0, 142, 138);
+    color: white;
+}
+
 .homeForm {
-    margin: 25px;
-    padding: 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: black 2px solid;
-    border-radius: 5px;
 }
 
 .homeInput {
@@ -63,9 +65,10 @@
     font-weight: 500;
     border: black solid 2px;
     border-radius: 3px;
+    text-align: center;
 }
 
-.characterWrapper {
+.charactersWrapper {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -77,15 +80,38 @@
 }
 
 .characterLabel {
+    width: 250px;
+    height: 400px;
     margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    border: black 5px solid;
+    border-radius: 5px;
     cursor: pointer;
     transition: 0.2s ease-in-out;
 }
 
 .characterLabel:hover {
-    color: orangered;
+    border: rgb(239, 83, 0) 5px solid;
 }
 
 .characterInput[type='radio']:checked + .characterLabel {
-    color: teal;
+    border: rgb(0, 142, 138) 5px solid;
+}
+
+.characterImage {
+    margin: 25px;
+}
+
+.characterH4 {
+    margin-top: 0px;
+    margin-bottom: 15px;
+    font-size: 1.1rem;
+    font-weight: 800;
+}
+
+.characterP {
+    margin: 5px;
 }
