--- a/src/Login/LoginPage.css
+++ b/src/Login/LoginPage.css
@@ -7,7 +7,6 @@
 }
 
 .loginH3 {
-    /* font-family: 'Oswald', sans-serif; */
     font-size: 1.5rem;
     font-weight: 600;
 }
@@ -20,7 +19,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: black 2px solid;
+    border: black 5px solid;
     border-radius: 5px;
 }
 
@@ -41,6 +40,7 @@
     font-weight: 500;
     border: black solid 2px;
     border-radius: 3px;
+    text-align: center;    
 }
 
 .loginButton {
@@ -60,13 +60,20 @@
     font-size: 1rem;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-
+    -webkit-appearance: none;
+    -moz-appearance: none;
 }
 
 .loginButton:hover {
-    border: orange solid 2px;
+    border:  rgb(239, 83, 0) solid 2px;
     border-radius: 3px;
     background-color: transparent;
     color: black;
 }
 
+.loginButton:active {
+    border:  rgb(239, 83, 0) solid 2px;
+    border-radius: 3px;
+    background-color:rgb(0, 142, 138);
+    color: white;
+}
