--- a/src/Results/ResultsPage.css
+++ b/src/Results/ResultsPage.css
@@ -1,5 +1,6 @@
 .resultsMain {
     padding-top: 50px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -23,19 +24,29 @@
 
 .locationResults {
     width: 300px;
-    height: 400px;
+    height: 415px;
     margin: 25px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    border: black 2px solid;
+    border: black 5px solid;
     border-radius: 5px;
 }
 
+.imageWrapper {
+    width: 256px;
+    height: 256px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
 .resultsImage {
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
 }
 
 .resultsH4 {
@@ -47,7 +58,7 @@
 .resultsP {
     margin: 0px;
     width: 250px;
-    font-size: .8rem;
+    font-size: .9rem;
 }
 
 .newGameButton {
