css refined and abouts added

--- a/src/About/AboutPage.css
+++ b/src/About/AboutPage.css
@@ -35,6 +35,8 @@
 
 .teamImage {
     margin-top: 20px;
+    width: 128px;
+    height: 128px;
 }
 
 .aboutH5 {
@@ -62,6 +64,18 @@
 
 .aboutP {
     margin: 10px;
+}
+
+.socialLinkWrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.socialLinkWrapper img {
+    width: 32px;
+    height: 32px;
 }
 
 .dataLink {
