--- a/src/Results/ResultsPage.css
+++ b/src/Results/ResultsPage.css
@@ -45,8 +45,9 @@
 }
 
 .resultsImage {
-    width: 200px;
-    height: 200px;
+    width: 170px;
+    height: 170px;
+    border-radius: 5px;
 }
 
 .resultsH4 {
